objects/Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Value_Type__c.Category__c</field>
                <operation>equals</operation>
                <value>Credit Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Value_Type__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <label>Adjustment</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>OA{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Both credit amount and Opportunity value</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit amount only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity value only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Adjustment</label>
    <nameField>
        <displayFormat>Adj{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validated_Adjustment</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
	ISBLANK(Adjustment__c), 
	ISNULL(Adjustment__c),
        Adjustment__c = 0
)</errorConditionFormula>
        <errorDisplayField>Adjustment__c</errorDisplayField>
        <errorMessage>Adjustment can&apos;t be blank/zero.</errorMessage>
    </validationRules>
</CustomObject>